--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rampart+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <title>Soccer Info</title>
   </head>
   <body>
 
     <header class="bg-dark py-3">
-      <div class="container">
-        <a href="index.html" class="text-decoration-none"><h2 class="rampart-font text-white">Soccer Info</h2></a>
+      <div class="container clearfix">
+        <a href="index.html" class="float-start text-decoration-none"><h2 class="rampart-font text-white">Soccer Info</h2></a>
       </div>
     </header>
     
 
-    <div class="container mt-5">
+    <div class="container mt-5" id="form-container">
       <form class="d-flex w-50 align-items-center">
         <label class="fs-5 me-3" for="league">League</label>
         <select name="league" class="form-select w-50">
@@ -37,7 +39,7 @@
       </form>
     </div>
 
-    <div class="container mt-5">
+    <div class="container mt-5" id="container-table">
       <div class="table-responsive">
         <table class="table table-hover" >
           <thead>
@@ -64,6 +66,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/57888ec9eb.js" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
 
     </body>
